[package]
name = "kyu"
version = "0.1.1"
edition = "2021"
description = "A simple reimplmentation of git in Rust. (Strongly inspired by wyag)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
flate2 = { version = "1.0.30", features = ["zlib"] }
hex-literal = "0.4.1"
rust-ini = "0.21.0"
sha1 = "0.10.6"
